--- a/1.html
+++ b/1.html
@@ -2,16 +2,22 @@
 <head>
   <title>Calisthenics</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <h1><a href="1.html">Calisthenics</a></h1>
-  <ol>
-    <li><a href="pullup.html">Pull-Ups</a></li>
-    <li><a href="pushup.html">Push-Ups</a></li>
-    <li><a href="muscleup.html">Muscle-Ups</a></li>
-  </ol>
+  <div id="grid">
+    <ol>
+      <li><a href="pullup.html">Pull-Ups</a></li>
+      <li><a href="pushup.html">Push-Ups</a></li>
+      <li><a href="muscleup.html">Muscle-Ups</a></li>
+    </ol>
 
-  <p><a href="https://en.wikipedia.org/wiki/Calisthenics" target="_blank" title="calithenics specification">Calisthenics</a>(American English) or callisthenics (British English) is a form of exercise consisting of a variety of movements that exercise large muscle groups (gross motor movements), such as running, standing, grasping, pushing, etc.<img src="calisthenics.jpeg" width="100%"></p>
-  <p style="margin-top:45px;">These exercises are often performed rhythmically and with minimal equipment, as bodyweight exercises. They are intended to increase strength, fitness, and flexibility, through movements such as pulling, pushing, bending, jumping, or swinging, using one's body weight for resistance. Calisthenics can provide the benefits of muscular and aerobic conditioning, in addition to improving psychomotor skills such as balance, agility, and coordination.</p>
+    <div id="article">
+      <h2>Calisthenics</h2>
+      <p>
+        <a href="https://en.wikipedia.org/wiki/Calisthenics" target="_blank" title="calithenics specification" id="link">Calisthenics</a>(American English) or callisthenics (British English) is a form of exercise consisting of a variety of movements that exercise large muscle groups (gross motor movements), such as running, standing, grasping, pushing, etc.These exercises are often performed rhythmically and with minimal equipment, as bodyweight exercises. They are intended to increase strength, fitness, and flexibility, through movements such as pulling, pushing, bending, jumping, or swinging, using one's body weight for resistance. Calisthenics can provide the benefits of muscular and aerobic conditioning, in addition to improving psychomotor skills such as balance, agility, and coordination.<img src="calisthenics.jpeg" width="100%">
+      </p>
+  </div>
 </body>
