--- a/pullup.html
+++ b/pullup.html
@@ -2,15 +2,27 @@
 <head>
   <title>Pull-Ups</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
+  <style>
+    img{
+      margin-top: 10px;
+    }
+  </style>
 </head>
 
 <body>
   <h1><a href="1.html">Calisthenics</a></h1>
-  <ol>
-    <li><a href="pullup.html">Pull-Ups</a></li>
-    <li><a href="pushup.html">Push-Ups</a></li>
-    <li><a href="muscleup.html">Muscle-Ups</a></li>
-  </ol>
-
-  <p>A <a href="https://en.wikipedia.org/wiki/Pull-up_(exercise)" target="_blank" title="pull-up specification">Pull-Up</a> is an upper-body strength exercise. The pull-up is a closed-chain movement where the body is suspended by the hands and pulls up. As this happens, the elbows flex and the shoulders adduct and extend to bring the elbows to the torso.<img src="pullup.jpg" width="100%"></p>
+  <div id="grid">
+    <ol>
+      <li><a href="pullup.html">Pull-Ups</a></li>
+      <li><a href="pushup.html">Push-Ups</a></li>
+      <li><a href="muscleup.html">Muscle-Ups</a></li>
+    </ol>
+    <div id="article">
+      <h2>Pull Ups</h2>
+      <p>
+        A <a href="https://en.wikipedia.org/wiki/Pull-up_(exercise)" target="_blank" title="pull-up specification" id="link">Pull-Up</a> is an upper-body strength exercise. The pull-up is a closed-chain movement where the body is suspended by the hands and pulls up. As this happens, the elbows flex and the shoulders adduct and extend to bring the elbows to the torso.<img src="pullup.jpg" width="100%">
+      </p>
+    </div>
+  </div>
 </body>
