--- a/muscleup.html
+++ b/muscleup.html
@@ -2,15 +2,28 @@
 <head>
   <title>Muscle-Ups</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
+  <style>
+    img{
+      margin-top: 10px;
+    }
+  </style>
 </head>
 
 <body>
   <h1><a href="1.html">Calisthenics</a></h1>
-  <ol>
-    <li><a href="pullup.html">Pull-Ups</a></li>
-    <li><a href="pushup.html">Push-Ups</a></li>
-    <li><a href="muscleup.html">Muscle-Ups</a></li>
-  </ol>
+  <div id="grid">
+    <ol>
+      <li><a href="pullup.html">Pull-Ups</a></li>
+      <li><a href="pushup.html">Push-Ups</a></li>
+      <li><a href="muscleup.html">Muscle-Ups</a></li>
+    </ol>
 
-  <p>The <a href="https://en.wikipedia.org/wiki/Muscle-up" target="_blank" title="calithenics specification">Muscle-Up</a> is an advanced strength training exercise, within the domain of calisthenics. It is a combination routine of a radial pull-up followed by a dip. Variations exist for the rings as well as the bar.<img src="muscleup.jpg" width="100%"></p>
+    <div id="article">
+      <h2>Muscle Ups</h2>
+      <p>
+        The <a href="https://en.wikipedia.org/wiki/Muscle-up" target="_blank" title="calithenics specification" id="link">Muscle-Up</a> is an advanced strength training exercise, within the domain of calisthenics. It is a combination routine of a radial pull-up followed by a dip. Variations exist for the rings as well as the bar.<img src="muscleup.jpg" width="100%">
+      </p>
+    </div>
+  </div>
 </body>
