--- a/pushup.html
+++ b/pushup.html
@@ -2,15 +2,27 @@
 <head>
   <title>Push-Ups</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
+  <style>
+    img{
+      margin-top: 10px;
+    }
+  </style>
 </head>
 
 <body>
   <h1><a href="1.html">Calisthenics</a></h1>
-  <ol>
-    <li><a href="pullup.html">Pull-Ups</a></li>
-    <li><a href="pushup.html">Push-Ups</a></li>
-    <li><a href="muscleup.html">Muscle-Ups</a></li>
-  </ol>
-
-  <p>A <a href="https://en.wikipedia.org/wiki/Push-up" target="_blank" title="push-up specification">Push-Up</a> is a common calisthenics exercise beginning from the prone position. By raising and lowering the body using the arms, push-ups exercise the pectoral muscles, triceps, and anterior deltoids, with ancillary benefits to the rest of the deltoids, serratus anterior, coracobrachialis and the midsection as a whole. Push-ups are a basic exercise used in civilian athletic training or physical education and commonly in military physical training. They are also a common form of punishment used in the military, school sport, and some martial arts disciplines.<img src="pushup.jpg" width="100%"></p>
+  <div id="grid">
+    <ol>
+      <li><a href="pullup.html">Pull-Ups</a></li>
+      <li><a href="pushup.html">Push-Ups</a></li>
+      <li><a href="muscleup.html">Muscle-Ups</a></li>
+    </ol>
+    <div id="article">
+      <h2>Push Ups</h2>
+      <p>
+        A <a href="https://en.wikipedia.org/wiki/Push-up" target="_blank" title="push-up specification" id="link">Push-Up</a> is a common calisthenics exercise beginning from the prone position. By raising and lowering the body using the arms, push-ups exercise the pectoral muscles, triceps, and anterior deltoids, with ancillary benefits to the rest of the deltoids, serratus anterior, coracobrachialis and the midsection as a whole. Push-ups are a basic exercise used in civilian athletic training or physical education and commonly in military physical training. They are also a common form of punishment used in the military, school sport, and some martial arts disciplines.<img src="pushup.jpg" width="100%">
+      </p>
+    </div>
+  </div>
 </body>
